--- a/#source/scss/preprocessor/mixins-variables-elements.scss
+++ b/#source/scss/preprocessor/mixins-variables-elements.scss
@@ -1,5 +1,5 @@
-/*---------------------- Переменная(variables) --------------------- */
-@import "variables.scss";
+/*---------------------- Переменная(variable) --------------------- */
+@import "variable.scss";
 /*------------------------------------------------------------------ */
 
 /*----------------------- Элемент(elements) ------------------------ */
