--- a/#source/scss/structure/content/products.scss
+++ b/#source/scss/structure/content/products.scss
@@ -50,7 +50,7 @@
 .title-h3 {
 	font: bold 24px/22px "Muli-Regular";
 	text-align: center;
-	color: #ffffff;
+	color: $white;
 }
 
 .products__text {
@@ -59,7 +59,7 @@
 	margin-top: 10px;
 	flex: 1 1 auto;
 	border: 1px solid #000;
-	color: #ffffff;
+	color: $white;
 }
 
 .products__bth {
@@ -68,7 +68,7 @@
 	height: 60px;
 	margin: 60px 0 80px 0;
 	text-indent: -70px;
-	border: 1px solid rgb(255, 249, 249);
+	border: 1px solid $white;
 	background-color: #ffffff00;
 }
 
