--- a/#source/scss/structure/content/testimonials.scss
+++ b/#source/scss/structure/content/testimonials.scss
@@ -22,7 +22,7 @@
 .testimonials__text {
 	display: inline-block;
 	max-width: 460px;
-	color: #ffffff;
+	color: $white;
 }
 
 .testimonials__sub-text {
