--- a/#source/scss/structure/content/about.scss
+++ b/#source/scss/structure/content/about.scss
@@ -4,7 +4,7 @@
 
 .about__conteiner {
 	max-width: 1920px;
-	margin: 0 auto 0 0;
+	margin: 0 auto;
 	border: 1px solid #000;
 }
 
@@ -22,8 +22,7 @@
 }
 
 .about__image {
-	display: flex;
-	flex-direction: column;
+	@extend %flexDirC;
 	justify-content: flex-end;
 	height: 100%;
 }
@@ -58,13 +57,11 @@
 }
 
 .about__item {
+	@extend %posRel;
+	color: $white;
 	font: 21px/25px "Muli-Regular";
 	margin-top: 30px;
 	padding-left: 35px;
-	position: relative;
-	top: 0;
-	left: 0;
-	color: $white;
 }
 .about__item:before {
 	content: "";
