--- a/#source/scss/structure/content/products.scss
+++ b/#source/scss/structure/content/products.scss
@@ -36,8 +36,7 @@
 }
 
 .products__wrapper {
-	display: flex;
-	flex-direction: column;
+	@extend %flexDirC;
 	height: 100%;
 	border: 1px solid #000;
 }
