--- a/#source/scss/structure/content/smoothies.scss
+++ b/#source/scss/structure/content/smoothies.scss
@@ -5,8 +5,7 @@
 	max-width: 1100px;
 	margin: 0 auto;
 }
-.smoothies__desripction {
-}
+
 .title {
 	text-align: center;
 	font-size: 50px;
@@ -62,8 +61,7 @@
 }
 
 .smoothies__wrapper {
-	display: flex;
-	flex-direction: column;
+	@extend %flexDirC;
 	height: 100%;
 }
 .smoothies__image {
