--- a/#source/scss/structure/content/story.scss
+++ b/#source/scss/structure/content/story.scss
@@ -22,8 +22,7 @@
 
 .story__wrapper {
 	height: 100%;
-	display: flex;
-	flex-direction: column;
+	@extend %flexDirC;
 }
 
 .title--left {
@@ -48,15 +47,11 @@
 .story__image {
 	width: 100%;
 	height: 100%;
-	position: relative;
-	top: 0;
-	left: 0;
+	@extend %posRel;
 	padding: 0 0 92.31% 0;
 }
 .story__image img {
-	position: absolute;
-	top: 0;
-	left: 0;
+	@extend %posAbs;
 	height: 100%;
 	width: 100%;
 }
