--- a/#source/scss/structure/header.scss
+++ b/#source/scss/structure/header.scss
@@ -1,7 +1,5 @@
 .header {
-	position: absolute;
-	top: 0;
-	left: 0;
+	@extend %posAbs;
 	z-index: 50;
 	width: 100%;
 	height: 100%;
@@ -14,8 +12,7 @@
 	height: 100%;
 }
 .header__row {
-	display: flex;
-	flex-direction: column;
+	@extend %flexDirC;
 	border: 1px solid #000;
 }
 
@@ -80,16 +77,12 @@
 
 .icon__column:nth-child(1) .icon__list:nth-child(3) {
 	margin: 0 0 0 25px/560.4px * 100%;
-	position: relative;
-	top: 0;
-	left: 0;
+	@extend %posRel;
 }
 
 .icon__column:nth-child(1) .icon__list:nth-child(3) .icon__link {
 	margin: 0 0 0 25px/560.4px * 100%;
-	position: relative;
-	top: 0;
-	left: 0;
+	@extend %posRel;
 }
 // ********************2***************************
 .icon__column:nth-child(2) {
@@ -146,18 +139,16 @@
 }
 
 .bth {
-	position: relative;
-	top: 0;
-	left: 0;
-	border: 1px solid #036b416b;
-	font: 24px "Muli-Regular";
+	@extend %posRel;
 	color: $white;
+	font: 24px "Muli-Regular";
 	width: 280px;
 	height: 70px;
 	background-color: #0aa566;
 	border-radius: 35px;
 	text-indent: -70px;
 	transition: transform 500ms ease;
+	border: 1px solid #036b416b;
 }
 
 .bth:hover {
@@ -180,9 +171,7 @@
 }
 
 .header__background {
-	position: relative;
-	top: 0;
-	left: 0;
+	@extend %posRel;
 	height: 100vh;
 	width: 100%;
 }
