--- a/css/index.css
+++ b/css/index.css
@@ -201,15 +201,34 @@ body {
 /*---------------------- Переменная(variable) --------------------- */
 /*------------------------------------------------------------------ */
 /*----------------------- Элемент(elements) ------------------------ */
+.instagram__image img, .blog__image img, .story__image img, .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.footer__bottom, .footer__text, .blog__title-bottom span, .blog__text span, .blog__image, .story__image, .about__item, .header__background, .bth, .icon__column:nth-child(1) .icon__list:nth-child(3) .icon__link, .icon__column:nth-child(1) .icon__list:nth-child(3) {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.blog__wrapper, .story__wrapper, .products__wrapper, .about__image, .smoothies__wrapper, .header__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 /*------------------------------------------------------------------ */
 /*------------------------- Миксин(mixins) ------------------------- */
 /*--**************************************************************-- */
 /*-----------------*****Структура(structure)*****------------------- */
 /*-------------------- Header(шапка докуманта) --------------------- */
 .header {
-  position: absolute;
-  top: 0;
-  left: 0;
   z-index: 50;
   width: 100%;
   height: 100%;
@@ -223,13 +242,6 @@ body {
 }
 
 .header__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   border: 1px solid #000;
 }
 
@@ -312,16 +324,10 @@ body {
 
 .icon__column:nth-child(1) .icon__list:nth-child(3) {
   margin: 0 0 0 4.4610992148%;
-  position: relative;
-  top: 0;
-  left: 0;
 }
 
 .icon__column:nth-child(1) .icon__list:nth-child(3) .icon__link {
   margin: 0 0 0 4.4610992148%;
-  position: relative;
-  top: 0;
-  left: 0;
 }
 
 .icon__column:nth-child(2) {
@@ -394,12 +400,8 @@ body {
 }
 
 .bth {
-  position: relative;
-  top: 0;
-  left: 0;
-  border: 1px solid #036b416b;
-  font: 24px "Muli-Regular";
   color: #fff;
+  font: 24px "Muli-Regular";
   width: 280px;
   height: 70px;
   background-color: #0aa566;
@@ -410,6 +412,7 @@ body {
   -o-transition: transform 500ms ease;
   transition: transform 500ms ease;
   transition: transform 500ms ease, -webkit-transform 500ms ease;
+  border: 1px solid #036b416b;
 }
 
 .bth:hover {
@@ -434,9 +437,6 @@ body {
 }
 
 .header__background {
-  position: relative;
-  top: 0;
-  left: 0;
   height: 100vh;
   width: 100%;
 }
@@ -756,13 +756,6 @@ body {
 }
 
 .smoothies__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   height: 100%;
 }
 
@@ -831,7 +824,7 @@ body {
 
 .about__conteiner {
   max-width: 1920px;
-  margin: 0 auto 0 0;
+  margin: 0 auto;
   border: 1px solid #000;
 }
 
@@ -851,13 +844,6 @@ body {
 }
 
 .about__image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -896,13 +882,10 @@ body {
 }
 
 .about__item {
+  color: #fff;
   font: 21px/25px "Muli-Regular";
   margin-top: 30px;
   padding-left: 35px;
-  position: relative;
-  top: 0;
-  left: 0;
-  color: #fff;
 }
 
 .about__item:before {
@@ -1057,13 +1040,6 @@ body {
   }
 }
 .products__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   height: 100%;
   border: 1px solid #000;
 }
@@ -1143,13 +1119,6 @@ body {
 
 .story__wrapper {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .title--left {
@@ -1178,16 +1147,10 @@ body {
 .story__image {
   width: 100%;
   height: 100%;
-  position: relative;
-  top: 0;
-  left: 0;
   padding: 0 0 92.31% 0;
 }
 
 .story__image img {
-  position: absolute;
-  top: 0;
-  left: 0;
   height: 100%;
   width: 100%;
 }
@@ -1355,26 +1318,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 50px 0 200px 0;
-  position: relative;
   padding: 0 0 67.003% 0;
-  top: 0;
-  left: 0;
-}
-
-.blog__image img {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.blog__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .blog__title {
@@ -1393,9 +1337,6 @@ body {
 }
 
 .blog__text span {
-  position: relative;
-  top: 0;
-  left: 0;
   font-family: "Muli-ExtraBoldItalic";
 }
 
@@ -1418,8 +1359,6 @@ body {
   font-size: 24px;
   text-align: center;
   display: inline-block;
-  position: relative;
-  top: 0;
   margin-bottom: 50px;
   color: #0aa566;
 }
@@ -1506,9 +1445,6 @@ body {
 }
 
 .instagram__image img {
-  position: absolute;
-  top: 0;
-  left: 0;
   height: 100%;
   width: 100%;
 }
@@ -1651,9 +1587,6 @@ body {
 
 .footer__text {
   font-size: 18px;
-  position: relative;
-  top: 0;
-  left: 0;
   color: #6d450c;
   border: 1px solid #000;
 }
@@ -1681,9 +1614,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
-  top: 0;
-  left: 0;
   height: 60px;
 }
 
