--- a/#source/scss/structure/content/about.scss
+++ b/#source/scss/structure/content/about.scss
@@ -30,8 +30,7 @@
 	border: 1px solid #000;
 }
 .about__image img {
-	width: 100%;
-	height: 100%;
+	@include wh(100%, 100%);
 }
 
 .about__description {
@@ -65,33 +64,30 @@
 }
 .about__item:before {
 	content: "";
+	@include wh(20px, 20px);
 	background: url("../assets/images/about/icon.png") center/cover no-repeat;
 	display: inline-block;
 	position: absolute;
 	top: 3px;
 	left: 0;
-	width: 20px;
-	height: 20px;
 }
 
 .about__bth {
+	@include wh(380px, 60px);
 	text-indent: -60px;
 	font-size: 24px;
 	background-color: rgb(21, 134, 110);
-	width: 380px;
-	height: 60px;
 	border-radius: 30px;
 	border: 1px solid rgb(175, 163, 68);
 }
 .about__bth:after {
 	content: "";
+	@include wh(30px, 10px);
 	position: absolute;
 	top: 25px;
 	right: 25px;
 	display: inline-block;
 	background: url("../assets/images/header/Arrow.png") center/ cover no-repeat;
-	width: 30px;
-	height: 10px;
 }
 
 @media (max-width: 1420px) {
