--- a/#source/scss/structure/content/instagram.scss
+++ b/#source/scss/structure/content/instagram.scss
@@ -21,20 +21,18 @@
 	border-radius: 50%;
 }
 .instagram__image img {
+	@include wh(100%, 100%);
 	@extend %posAbs;
-	height: 100%;
-	width: 100%;
 }
 
 .instagram__image:before {
 	content: "";
+	@include wh(26px, 26px);
 	display: inline-block;
 	background: url("/assets/images/istagram/Icon-inst.png") center/ cover no-repeat;
 	position: absolute;
 	bottom: 20px;
 	right: 20px;
-	width: 26px;
-	height: 26px;
 }
 
 @media (max-width: 764px) {
