--- a/#source/scss/structure/content/products.scss
+++ b/#source/scss/structure/content/products.scss
@@ -62,9 +62,8 @@
 }
 
 .products__bth {
+	@include wh(200px, 60px);
 	align-self: center;
-	width: 200px;
-	height: 60px;
 	margin: 60px 0 80px 0;
 	text-indent: -70px;
 	border: 1px solid $white;
@@ -73,11 +72,10 @@
 
 .products__bth:after {
 	content: "";
+	@include wh(30px, 15px);
 	position: absolute;
 	top: 23px;
 	right: 35px;
 	display: inline-block;
 	background: url("../assets/images/products/Arrow.png") center/ cover no-repeat;
-	width: 30px;
-	height: 15px;
 }
