--- a/#source/scss/structure/footer.scss
+++ b/#source/scss/structure/footer.scss
@@ -56,21 +56,17 @@
 }
 
 .input__search {
-	position: relative;
-	top: 0;
-	left: 0;
-	width: 90%;
-	height: 60px;
+	@include wh(90%, 60px);
+	@extend %posRel;
 	border-radius: 35px;
 }
 .input__search:before {
 	content: "";
+	@include wh(40px, 20px);
 	position: absolute;
 	top: 0;
 	left: 0;
 	background: url("../assets/images/footer/Icon.png") center/ cover no-repeat;
-	width: 40px;
-	height: 20px;
 	border: 1px solid #000;
 }
 
@@ -93,13 +89,12 @@
 
 .footer__text span:before {
 	content: "";
+	@include wh(48px, 43px);
 	position: absolute;
 	top: -25px;
 	left: -60px;
 	background: url("../assets/images/footer/Arrow.png") center/ cover no-repeat;
 	font-size: 18px;
-	width: 48px;
-	height: 43px;
 	color: #6d450c;
 }
 .footer__bottom--bg {
@@ -127,11 +122,10 @@
 }
 
 .footer__bottom-image {
+	@include wh(50px, 50px);
 	position: absolute;
 	top: -30px;
 	right: 0;
-	width: 50px;
-	height: 50px;
 	border-radius: 5px;
 	background-color: #f2662f;
 	transition: transform 500ms cubic-bezier(0.17, 0.67, 0.6, 1.31);
@@ -141,13 +135,12 @@
 }
 .footer__bottom-image:before {
 	content: "";
+	@include wh(13px, 25px);
 	position: absolute;
 	top: 15px;
 	left: 50%;
 	transform: translate(-50%);
 	background: url("../assets/images/footer/arrow2.png") center/ cover no-repeat;
-	width: 13px;
-	height: 25px;
 }
 @media (max-width: 1200px) {
 	.footer__row {
@@ -183,19 +176,20 @@
 		text-align: center;
 	}
 	.footer__text span {
-		@extend %posRel;
+		position: relative;
+		top: 0;
+		left: 0;
 		border: 1px solid #000;
 		display: inline-block;
 	}
 	.footer__text span:before {
 		content: "";
+		@include wh(48px, 43px);
 		position: absolute;
 		top: -25px;
 		left: -60px;
 		background: url("../assets/images/footer/Arrow.png") center/ cover no-repeat;
 		font-size: 18px;
-		width: 48px;
-		height: 43px;
 		color: #6d450c;
 	}
 
@@ -212,8 +206,7 @@
 		text-align: center;
 	}
 	.footer__image img {
-		height: 80%;
-		width: 80%;
+		@include wh(80%, 80%);
 	}
 	.footer__column:nth-child(1) {
 		flex: 1 1 100%;
