--- a/#source/scss/structure/header.scss
+++ b/#source/scss/structure/header.scss
@@ -1,8 +1,7 @@
 .header {
 	@extend %posAbs;
+	@include wh(100%, 100%);
 	z-index: 50;
-	width: 100%;
-	height: 100%;
 	padding-top: 70px;
 }
 
@@ -129,8 +128,7 @@
 	border-radius: 50%;
 	text-align: center;
 	padding-top: 6px;
-	width: 23px;
-	height: 23px;
+	@include wh(23px, 23px);
 	font-size: 12px;
 }
 
@@ -140,10 +138,9 @@
 
 .bth {
 	@extend %posRel;
+	@include wh(280px, 70px);
 	color: $white;
 	font: 24px "Muli-Regular";
-	width: 280px;
-	height: 70px;
 	background-color: #0aa566;
 	border-radius: 35px;
 	text-indent: -70px;
@@ -161,19 +158,17 @@
 
 .bth:after {
 	content: "";
+	@include wh(40px, 20px);
 	position: absolute;
 	top: 23px;
 	right: 25px;
 	display: inline-block;
 	background: url("../assets/images/header/Arrow.png") center/ cover no-repeat;
-	width: 40px;
-	height: 20px;
 }
 
 .header__background {
 	@extend %posRel;
-	height: 100vh;
-	width: 100%;
+	@include wh(100%, 100vh);
 }
 
 .header__background img {
@@ -181,15 +176,13 @@
 @media (max-width: 1200px) {
 	// bth==================bth========================bth
 	.bth {
+		@include wh(180px, 50px);
 		font-size: 16px;
-		width: 180px;
-		height: 50px;
 	}
 	.bth:after {
+		@include wh(25px, 12.5px);
 		top: 19px;
 		right: 25px;
-		width: 25px;
-		height: 12.5px;
 	}
 
 	//bth---------------------bth----------------------bth
@@ -246,8 +239,7 @@
 	}
 
 	.header__image img {
-		width: 100%;
-		height: 100%;
+		@include wh(100%, 100%);
 	}
 
 	.bth:hover {
