--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,7 @@ body {
   left: 0;
 }
 
-.footer__bottom, .footer__text, .blog__title-bottom span, .blog__text span, .blog__image, .story__image, .about__item, .header__background, .bth, .icon__column:nth-child(1) .icon__list:nth-child(3) .icon__link, .icon__column:nth-child(1) .icon__list:nth-child(3) {
+.footer__bottom, .footer__text, .input__search, .blog__title-bottom span, .blog__text span, .blog__image, .story__image, .about__item, .header__background, .bth, .icon__column:nth-child(1) .icon__list:nth-child(3) .icon__link, .icon__column:nth-child(1) .icon__list:nth-child(3) {
   position: relative;
   top: 0;
   left: 0;
@@ -229,9 +229,9 @@ body {
 /*-----------------*****Структура(structure)*****------------------- */
 /*-------------------- Header(шапка докуманта) --------------------- */
 .header {
-  z-index: 50;
   width: 100%;
   height: 100%;
+  z-index: 50;
   padding-top: 70px;
 }
 
@@ -400,10 +400,10 @@ body {
 }
 
 .bth {
-  color: #fff;
-  font: 24px "Muli-Regular";
   width: 280px;
   height: 70px;
+  color: #fff;
+  font: 24px "Muli-Regular";
   background-color: #0aa566;
   border-radius: 35px;
   text-indent: -70px;
@@ -427,32 +427,32 @@ body {
 
 .bth:after {
   content: "";
+  width: 40px;
+  height: 20px;
   position: absolute;
   top: 23px;
   right: 25px;
   display: inline-block;
   background: url("../assets/images/header/Arrow.png") center/cover no-repeat;
-  width: 40px;
-  height: 20px;
 }
 
 .header__background {
-  height: 100vh;
   width: 100%;
+  height: 100vh;
 }
 
 @media (max-width: 1200px) {
   .bth {
-    font-size: 16px;
     width: 180px;
     height: 50px;
+    font-size: 16px;
   }
 
   .bth:after {
-    top: 19px;
-    right: 25px;
     width: 25px;
     height: 12.5px;
+    top: 19px;
+    right: 25px;
   }
 
   .header__column:nth-child(2) {
@@ -466,22 +466,22 @@ body {
 
 @media (max-width: 1200px) {
   .header__burger {
+    width: 21px;
+    height: 14px;
     position: fixed;
     z-index: 1000;
     top: 50px;
     left: 10px;
     display: block;
-    width: 21px;
-    height: 14px;
   }
 
   .header__burger span,
 .header__burger:before,
 .header__burger:after {
     content: "";
-    background-color: #f5342e;
     width: 100%;
     height: 2px;
+    background-color: #f5342e;
     border-radius: 25px;
     position: absolute;
     bottom: 0;
@@ -541,11 +541,11 @@ body {
 }
 
 .menu {
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
   background-color: rgba(0, 0, 0, 0.616);
   -webkit-transform: translate(-120%);
       -ms-transform: translate(-120%);
@@ -559,11 +559,11 @@ body {
 }
 
 .menu.active {
+  width: 100%;
+  height: 100%;
   -webkit-transform: translate(0%);
       -ms-transform: translate(0%);
           transform: translate(0%);
-  height: 100%;
-  width: 100%;
   overflow: auto;
 }
 
@@ -890,34 +890,34 @@ body {
 
 .about__item:before {
   content: "";
+  width: 20px;
+  height: 20px;
   background: url("../assets/images/about/icon.png") center/cover no-repeat;
   display: inline-block;
   position: absolute;
   top: 3px;
   left: 0;
-  width: 20px;
-  height: 20px;
 }
 
 .about__bth {
+  width: 380px;
+  height: 60px;
   text-indent: -60px;
   font-size: 24px;
   background-color: #15866e;
-  width: 380px;
-  height: 60px;
   border-radius: 30px;
   border: 1px solid #afa344;
 }
 
 .about__bth:after {
   content: "";
+  width: 30px;
+  height: 10px;
   position: absolute;
   top: 25px;
   right: 25px;
   display: inline-block;
   background: url("../assets/images/header/Arrow.png") center/cover no-repeat;
-  width: 30px;
-  height: 10px;
 }
 
 @media (max-width: 1420px) {
@@ -1067,11 +1067,11 @@ body {
 }
 
 .products__bth {
+  width: 200px;
+  height: 60px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  width: 200px;
-  height: 60px;
   margin: 60px 0 80px 0;
   text-indent: -70px;
   border: 1px solid #fff;
@@ -1080,13 +1080,13 @@ body {
 
 .products__bth:after {
   content: "";
+  width: 30px;
+  height: 15px;
   position: absolute;
   top: 23px;
   right: 35px;
   display: inline-block;
   background: url("../assets/images/products/Arrow.png") center/cover no-repeat;
-  width: 30px;
-  height: 15px;
 }
 
 /*------------------------------------------------------------------ */
@@ -1138,8 +1138,8 @@ body {
 }
 
 .storu__bth {
-  height: 60px;
   width: 300px;
+  height: 60px;
   text-indent: -90px;
   margin: 0 0 60px 0;
 }
@@ -1151,8 +1151,8 @@ body {
 }
 
 .story__image img {
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 1024px) {
@@ -1188,6 +1188,8 @@ body {
   }
 
   .storu__bth {
+    width: 200px;
+    height: 50px;
     display: inline-block;
     position: relative;
     top: 0;
@@ -1195,8 +1197,6 @@ body {
     -webkit-transform: translate(-50%);
         -ms-transform: translate(-50%);
             transform: translate(-50%);
-    height: 50px;
-    width: 200px;
     text-indent: -50px;
   }
 }
@@ -1445,19 +1445,19 @@ body {
 }
 
 .instagram__image img {
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 .instagram__image:before {
   content: "";
+  width: 26px;
+  height: 26px;
   display: inline-block;
   background: url("/assets/images/istagram/Icon-inst.png") center/cover no-repeat;
   position: absolute;
   bottom: 20px;
   right: 20px;
-  width: 26px;
-  height: 26px;
 }
 
 @media (max-width: 764px) {
@@ -1551,9 +1551,6 @@ body {
 }
 
 .input__search {
-  position: relative;
-  top: 0;
-  left: 0;
   width: 90%;
   height: 60px;
   border-radius: 35px;
@@ -1561,12 +1558,12 @@ body {
 
 .input__search:before {
   content: "";
+  width: 40px;
+  height: 20px;
   position: absolute;
   top: 0;
   left: 0;
   background: url("../assets/images/footer/Icon.png") center/cover no-repeat;
-  width: 40px;
-  height: 20px;
   border: 1px solid #000;
 }
 
@@ -1593,13 +1590,13 @@ body {
 
 .footer__text span:before {
   content: "";
+  width: 48px;
+  height: 43px;
   position: absolute;
   top: -25px;
   left: -60px;
   background: url("../assets/images/footer/Arrow.png") center/cover no-repeat;
   font-size: 18px;
-  width: 48px;
-  height: 43px;
   color: #6d450c;
 }
 
@@ -1636,11 +1633,11 @@ body {
 }
 
 .footer__bottom-image {
+  width: 50px;
+  height: 50px;
   position: absolute;
   top: -30px;
   right: 0;
-  width: 50px;
-  height: 50px;
   border-radius: 5px;
   background-color: #f2662f;
   -webkit-transition: -webkit-transform 500ms cubic-bezier(0.17, 0.67, 0.6, 1.31);
@@ -1658,6 +1655,8 @@ body {
 
 .footer__bottom-image:before {
   content: "";
+  width: 13px;
+  height: 25px;
   position: absolute;
   top: 15px;
   left: 50%;
@@ -1665,8 +1664,6 @@ body {
       -ms-transform: translate(-50%);
           transform: translate(-50%);
   background: url("../assets/images/footer/arrow2.png") center/cover no-repeat;
-  width: 13px;
-  height: 25px;
 }
 
 @media (max-width: 1200px) {
@@ -1720,22 +1717,22 @@ body {
   }
 
   .footer__text span {
-    border: 1px solid #000;
-    display: inline-block;
     position: relative;
     top: 0;
     left: 0;
+    border: 1px solid #000;
+    display: inline-block;
   }
 
   .footer__text span:before {
     content: "";
+    width: 48px;
+    height: 43px;
     position: absolute;
     top: -25px;
     left: -60px;
     background: url("../assets/images/footer/Arrow.png") center/cover no-repeat;
     font-size: 18px;
-    width: 48px;
-    height: 43px;
     color: #6d450c;
   }
 
@@ -1755,8 +1752,8 @@ body {
   }
 
   .footer__image img {
-    height: 80%;
     width: 80%;
+    height: 80%;
   }
 
   .footer__column:nth-child(1) {
