--- a/#source/scss/structure/content/instagram.scss
+++ b/#source/scss/structure/content/instagram.scss
@@ -1,11 +1,13 @@
 .instagram__row {
 	display: flex;
 	perspective: 700px;
+	overflow-x: auto;
 }
 
 .instagram__column {
 	perspective: 500px;
-	flex: 1 0 20%;
+	width: 20%;
+	min-width: 200px;
 }
 
 .instagram__image {
@@ -33,15 +35,4 @@
 	position: absolute;
 	bottom: 20px;
 	right: 20px;
-}
-
-@media (max-width: 764px) {
-	.instagram__row {
-		display: flex;
-		flex-wrap: wrap;
-	}
-
-	.instagram__column {
-		flex: 1 1 100%;
-	}
 }
