--- a/#source/scss/structure/content/smoothies.scss
+++ b/#source/scss/structure/content/smoothies.scss
@@ -66,7 +66,8 @@
 }
 .smoothies__image {
 	margin: 27px 0;
-	flex: 1 1 100%;
+	flex: 1 1 auto;
+	border: 1px solid #000;
 }
 
 @media (max-width: 768px) {
