--- a/#source/scss/structure/content/story.scss
+++ b/#source/scss/structure/content/story.scss
@@ -13,11 +13,16 @@
 
 .story__column {
 	flex: 1 0 50%;
+	border: 1px solid #000;
 }
 
 .story__column:nth-child(1) {
 	margin-top: 145px;
 	padding-left: 20px;
+}
+
+.story__column:nth-child(2) {
+	@extend %posRel;
 }
 
 .story__wrapper {
@@ -51,6 +56,13 @@
 .story__image img {
 	@include wh(100%, 100%);
 	@extend %posAbs;
+}
+
+.story__image--stamp {
+	@include wh(50%, 50%);
+	position: absolute;
+	top: 25px;
+	left: -120px;
 }
 
 @media (max-width: 1024px) {
