--- a/#source/scss/structure/header.scss
+++ b/#source/scss/structure/header.scss
@@ -121,6 +121,7 @@
 }
 
 .icon__tabs {
+	@include wh(23px, 23px);
 	position: absolute;
 	top: -12px;
 	right: -20px;
@@ -128,7 +129,6 @@
 	border-radius: 50%;
 	text-align: center;
 	padding-top: 6px;
-	@include wh(23px, 23px);
 	font-size: 12px;
 }
 
@@ -144,7 +144,7 @@
 	background-color: #0aa566;
 	border-radius: 35px;
 	text-indent: -70px;
-	transition: transform 500ms ease;
+	transition: transform 500ms cubic-bezier(0.33, 0.46, 0.08, 1.33);
 	border: 1px solid #036b416b;
 }
 
@@ -164,6 +164,7 @@
 	right: 25px;
 	display: inline-block;
 	background: url("../assets/images/header/Arrow.png") center/ cover no-repeat;
+	transition-duration: 1s;
 }
 
 .header__background {
