--- a/#source/scss/structure/content/instagram.scss
+++ b/#source/scss/structure/content/instagram.scss
@@ -11,9 +11,7 @@
 }
 
 .instagram__image {
-	position: relative;
-	top: 0;
-	left: 0;
+	@extend %posRel;
 	height: 100%;
 	padding: 0 0 103.76% 0;
 	transition-duration: 1s;
