--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,7 @@ body {
   left: 0;
 }
 
-.footer__bottom, .footer__text, .input__search, .blog__title-bottom span, .blog__text span, .blog__image, .story__image, .story__column:nth-child(2), .about__item, .header__background, .bth, .icon__column:nth-child(1) .icon__list:nth-child(3) .icon__link, .icon__column:nth-child(1) .icon__list:nth-child(3) {
+.footer__bottom, .footer__text, .input__search, .instagram__image, .blog__title-bottom span, .blog__text span, .blog__image, .story__image, .story__column:nth-child(2), .about__item, .header__background, .bth, .icon__column:nth-child(1) .icon__list:nth-child(3) .icon__link, .icon__column:nth-child(1) .icon__list:nth-child(3) {
   position: relative;
   top: 0;
   left: 0;
@@ -681,6 +681,29 @@ body {
             transform: translate(0);
   }
 }
+.banner {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  z-index: 10000;
+  -webkit-animation-name: animation;
+          animation-name: animation;
+  -webkit-animation-duration: 500ms;
+          animation-duration: 500ms;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+.text__play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #fff;
+}
+
 /*------------------------------------------------------------------ */
 /*-------------------- Content(контент страницы) ------------------- */
 /*---------------------- smoothies-------------- ------------------- */
@@ -1053,13 +1076,52 @@ body {
   margin: 130px 0 40px;
 }
 
+.products__image:hover {
+  -webkit-animation-name: animation;
+          animation-name: animation;
+  -webkit-animation-duration: 500ms;
+          animation-duration: 500ms;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes animation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate3d(1, 0, 0, 45deg) scale(1.7);
+            transform: rotate3d(1, 0, 0, 45deg) scale(1.7);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes animation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate3d(1, 0, 0, 45deg) scale(1.7);
+            transform: rotate3d(1, 0, 0, 45deg) scale(1.7);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
 .title-h3 {
+  color: #fff;
   font: bold 24px/22px "Muli-Regular";
   text-align: center;
-  color: #fff;
 }
 
 .products__text {
+  color: #fff;
   font-style: italic;
   font-family: "Muli-Regular";
   margin-top: 10px;
@@ -1067,7 +1129,6 @@ body {
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   border: 1px solid #000;
-  color: #fff;
 }
 
 .products__bth {
@@ -1442,9 +1503,6 @@ body {
 }
 
 .instagram__image {
-  position: relative;
-  top: 0;
-  left: 0;
   height: 100%;
   padding: 0 0 103.76% 0;
   -webkit-transition-duration: 1s;
