--- a/#source/scss/structure/header.scss
+++ b/#source/scss/structure/header.scss
@@ -111,13 +111,11 @@
 // ******************column************************
 // ------------------------------------------------
 .icon__list {
+	border: 3px solid rgb(79, 27, 163);
 	transition: transform 1s ease;
 }
 .icon__list:hover {
 	transform: rotate(360deg);
-}
-
-.icon__link {
 }
 
 .icon__tabs {
@@ -134,6 +132,7 @@
 
 .header__bottom {
 	align-self: center;
+	border: 3px solid rgb(79, 27, 163);
 }
 
 .bth {
@@ -208,7 +207,7 @@
 	.icon__column:nth-child(1) {
 		display: inline-block;
 	}
-	.icon__column:nth-child(1) .icon__list:nth-child(1) {
+	.icon__column:nth-child(1) .icon__list:first-child {
 		margin: 0;
 		text-align: center;
 	}
@@ -216,7 +215,7 @@
 		text-align: center;
 		margin: 10px;
 	}
-	.icon__column:nth-child(1) .icon__list:nth-child(3) {
+	.icon__column:nth-child(1) .icon__list:last-child {
 		margin: 0;
 	}
 
@@ -227,7 +226,7 @@
 	.icon__column:nth-child(3) {
 		display: inline-block;
 	}
-	.icon__column:nth-child(3) .icon__list:nth-child(1) {
+	.icon__column:nth-child(3) .icon__list:first-child {
 		margin: 0;
 		text-align: center;
 	}
@@ -235,7 +234,7 @@
 		text-align: center;
 		margin: 0;
 	}
-	.icon__column:nth-child(3) .icon__list:nth-child(3) {
+	.icon__column:nth-child(3) .icon__list:last-child {
 		margin: 0;
 	}
 
