--- a/#source/scss/structure/content/products.scss
+++ b/#source/scss/structure/content/products.scss
@@ -45,7 +45,7 @@
 	text-align: center;
 	margin: 130px 0 40px;
 }
-.products__column:hover .products__image {
+.products__column:hover .products__image img{
 	animation-name: animation;
 	animation-duration: 500ms;
 	animation-iteration-count: infinite;
